<resources>
    <string name="app_name">DishDash</string>
    <string name="description">Simplify Your Kitchen Experience</string>
    <string name="email_signup">SIGN UP WITH EMAIL</string>
    <string name="google_signup">SIGN UP WITH GOOGLE</string>
    <string name="have_account">Already have an account?</string>
    <string name="login"><u>Log In</u></string>
    <string name="skip">SKIP</string>
    <string name="signup_from_login"><u>Sign Up</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dish">Dish</string>
    <string name="dash">Dash</string>
    <string name="sign">Sign</string>
    <string name="up">Up</string>
    <string name="signup_qoute">People who love to eat are always the best</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="log">Log</string>
    <string name="in">In</string>
    <string name="login_qoute">Life is a combination of magic and pasta</string>
    <string name="donot_have_account">Do not have an account?</string>
    <string name="login_txt">login</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="favourite">Favourite</string>
    <string name="plan">Plan</string>
    <string name="add_to_plan">Add to plan</string>
    <string name="meal">MEALS</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="no_fav">No favourite rites added yet!\nStart saving </string>
    <string name="ingredients">Ingredients</string>
    <string name="countries">Countries</string>
    <string name="categories">Categories</string>
    <string name="search_recipes_ingredients">Search recipes, ingredients...</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="steps">Steps</string>
    <string name="logout">Logout</string>
    <string name="plans">Plans</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="default_web_client_id">169064303611-25cj2odpblf521accahrlr7lb9akj77t.apps.googleusercontent.com</string>
    <string name="empty_search">Added search to explore\n ingredients, categories, and countries</string>
    <string name="ok">OK</string>
    <string name="invalid_input">Invalid input!</string>
    <string name="delete">Delete</string>
    <string name="plan_subtitle">What is on your \n   menu this week? 🍽️</string>
    <string name="added_to_favourites">Added to Favourites</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="added_to_plan">Added to Plan</string>
    <string name="meal_not_found">Meal not found</string>

</resources>