<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".views.ui.authentication.login.LoginFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/logoName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/my_logo" />

    <TextView
        android:id="@+id/logoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/agbalumo"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/logText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alfa_slab_one"
        android:letterSpacing="0.05"
        android:text="@string/log"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/InText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/alfa_slab_one"
        android:letterSpacing="0.05"
        android:text="@string/in"
        android:textColor="@color/orchid_purple"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/logText"
        app:layout_constraintEnd_toEndOf="@+id/subtitleText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logText"
        app:layout_constraintTop_toTopOf="@+id/logText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/login_qoute"
        android:textColor="@color/light_white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/logText"
        app:layout_constraintTop_toBottomOf="@+id/logText" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/email_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:tint="@color/light_white" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/email_address"
        android:textColor="@color/light_white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/emailIcon"
        app:layout_constraintTop_toTopOf="@id/emailIcon" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/emailLabel"
        app:layout_constraintTop_toBottomOf="@id/emailLabel" />

    <View
        android:id="@+id/emailDivider"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="8dp"
        android:background="@color/semi_transparent_white"
        app:layout_constraintEnd_toEndOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="@id/emailEditText"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />


    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/password_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailDivider"
        app:tint="@color/light_white" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/password"
        android:textColor="@color/light_white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/passwordIcon"
        app:layout_constraintTop_toTopOf="@id/passwordIcon" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:focusableInTouchMode="true"
        app:boxBackgroundMode="none"
        app:boxStrokeColor="@color/white"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/light_white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingVertical="4dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:id="@+id/passwordDivider"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="8dp"
        android:background="@color/semi_transparent_white"
        app:layout_constraintEnd_toEndOf="@id/passwordTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/passwordTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout" />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_back_secondary_100"
        android:elevation="4dp"
        android:text="@string/login_txt"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordDivider" />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/donot_have_account"
        android:textColor="@color/light_white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBtn" />

    <TextView
        android:id="@+id/signupTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/signup_from_login"
        android:textColor="@color/light_white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/noAccount"
        app:layout_constraintTop_toTopOf="@+id/noAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>