<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/introduction_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_bg"

    >

    <androidx.cardview.widget.CardView
        android:id="@+id/component"
        android:layout_width="431dp"
        android:layout_height="381dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="488dp"
        android:backgroundTint="#CC1B1A1A"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="42dp"
                android:layout_height="36dp"
                android:layout_marginStart="108dp"
                android:layout_marginTop="34dp"
                app:layout_constraintEnd_toStartOf="@+id/logoName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/logoName"
                android:layout_width="138dp"
                android:layout_height="42dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="143dp"
                android:fontFamily="@font/agbalumo"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="83dp"
                android:text="@string/description"
                android:textColor="#FFFFFF"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <Button
                android:id="@+id/singupWithGoogleBtn"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:layout_marginStart="108dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="93dp"
                android:layout_marginBottom="9dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/google_icon"
                android:text="@string/google_signup"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/signupWithEmailBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/signupWithEmailBtn"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:layout_marginStart="108dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="93dp"
                android:layout_marginBottom="14dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/email_icon"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/haveAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singupWithGoogleBtn" />

            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="91dp"
                android:text="@string/have_account"
                android:textColor="#FFFFFF"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupWithEmailBtn" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="69dp"
                android:layout_marginBottom="85dp"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/haveAccount"
                app:layout_constraintTop_toBottomOf="@+id/signupWithEmailBtn"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="70dp"
        android:layout_height="37dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#451B1A1C"
        android:text="@string/skip"
        android:textSize="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>